--- a/home.html
+++ b/home.html
@@ -2,75 +2,89 @@
 <html lang="hi">
 <head>
   <meta charset="UTF-8">
-  <title>Ludo Group Link</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  <title>Ludo Group Link</title>
 
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Join India's most trusted and high-paying Ludo earning WhatsApp groups. Daily matches, instant withdrawals, and secure gameplay. JokerLudo is your #1 Ludo King group link hub." />
+  <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, whatsapp ludo group, join ludo whatsapp, trusted ludo groups, verified ludo whatsapp links, real cash ludo group, fastwin ludo king group" />
+  <meta name="author" content="JokerLudo Group" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" type="image/jpeg" />
+
+  <!-- Google AdSense Code -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725" crossorigin="anonymous"></script>
+
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="google-site-verification-code-here" />
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-EZF7SRX6EJ');
+  </script>
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="JokerLudo - Trusted Ludo WhatsApp Groups" />
+  <meta property="og:description" content="Join free & verified Ludo WhatsApp groups. Daily matches, secure payments & 24/7 support. Play Ludo and win cash daily with JokerLudo!" />
+  <meta property="og:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
+  <meta property="og:url" content="https://ludogrouplink.com/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="JokerLudo - Earn Real Money in Ludo" />
+  <meta name="twitter:description" content="Join JokerLudo's WhatsApp groups to earn money by playing Ludo daily. Safe, fast, and trusted." />
+  <meta name="twitter:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
+
+  <!-- JSON-LD Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "JokerLudo Group",
+    "url": "https://ludogrouplink.com",
+    "logo": "https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg",
+    "sameAs": [
+      "https://www.facebook.com/JokerLudo",
+      "https://www.instagram.com/JokerLudo"
+    ]
+  }
+  </script>
+
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f2f2f2;
     }
-
     header {
-      background: white;
-      padding: 50px 0;
-      border-bottom: 8px solid transparent;
-      border-image: linear-gradient(to right, #ff4e50, #f9d423);
-      border-image-slice: 1;
-      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
+      background: linear-gradient(135deg, #ff4e50, #f9d423);
+      padding: 60px 20px;
       text-align: center;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
     }
-
-    .animated-title {
-      display: inline-block;
-      font-size: 2.8rem;
-      font-weight: bold;
-      color: #333;
-      overflow: hidden;
-    }
-
     .animated-title span {
       display: inline-block;
       opacity: 0;
       transform: translateY(20px);
-      animation: typewriter 0.6s forwards;
+      animation: typewriter 0.5s forwards;
     }
-
-    /* Animate each letter with increasing delay */
-    .animated-title span:nth-child(1)  { animation-delay: 0.1s; }
-    .animated-title span:nth-child(2)  { animation-delay: 0.2s; }
-    .animated-title span:nth-child(3)  { animation-delay: 0.3s; }
-    .animated-title span:nth-child(4)  { animation-delay: 0.4s; }
-    .animated-title span:nth-child(5)  { animation-delay: 0.5s; }
-    .animated-title span:nth-child(6)  { animation-delay: 0.6s; }
-    .animated-title span:nth-child(7)  { animation-delay: 0.7s; }
-    .animated-title span:nth-child(8)  { animation-delay: 0.8s; }
-    .animated-title span:nth-child(9)  { animation-delay: 0.9s; }
-    .animated-title span:nth-child(10) { animation-delay: 1.0s; }
-    .animated-title span:nth-child(11) { animation-delay: 1.1s; }
-    .animated-title span:nth-child(12) { animation-delay: 1.2s; }
-    .animated-title span:nth-child(13) { animation-delay: 1.3s; }
-    .animated-title span:nth-child(14) { animation-delay: 1.4s; }
-    .animated-title span:nth-child(15) { animation-delay: 1.5s; }
-
+    .animated-title span:nth-child(n) { animation-delay: calc(0.1s * var(--i)); }
+    .animated-title {
+      font-size: 3rem;
+      font-weight: bold;
+      color: white;
+      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+    }
     @keyframes typewriter {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      to { opacity: 1; transform: translateY(0); }
     }
-
-    @media (max-width: 600px) {
-      .animated-title {
-        font-size: 1.8rem;
-      }
-    }
-
     .container {
       max-width: 800px;
       margin: 30px auto;
@@ -79,146 +93,119 @@
       border-radius: 10px;
       box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
     }
-
-    .container h1 {
+    .container h2 {
       color: #e91e63;
       text-align: center;
       margin-bottom: 20px;
     }
-
-    .intro-text {
-      font-size: 16px;
-      line-height: 1.6;
-      margin-bottom: 25px;
-    }
-
-    .form {
-      display: flex;
-      flex-direction: column;
-    }
-
-    label {
-      margin: 10px 0 5px;
-      font-weight: bold;
-    }
-
-    input[type="text"],
-    input[type="tel"],
-    input[type="email"],
-    input[type="url"],
-    textarea,
-    input[type="file"] {
+    .intro-text { font-size: 16px; line-height: 1.6; margin-bottom: 25px; }
+    .form { display: flex; flex-direction: column; }
+    label { margin: 10px 0 5px; font-weight: bold; }
+    input, textarea {
       padding: 10px;
       border: 1px solid #ccc;
       border-radius: 6px;
       font-size: 14px;
     }
-
-    textarea {
-      resize: vertical;
-    }
-
     button {
       margin-top: 20px;
-      background: #e91e63;
+      background: #25D366;
       color: white;
       border: none;
       padding: 12px;
       font-size: 16px;
       border-radius: 6px;
       cursor: pointer;
-      transition: background 0.3s ease;
     }
-
-    button:hover {
-      background: #c2185b;
-    }
-
     .contact-info {
       margin-top: 30px;
       background: #fce4ec;
       padding: 15px;
       border-left: 5px solid #e91e63;
       border-radius: 6px;
-      font-size: 14px;
     }
-
     footer {
       margin-top: 30px;
       text-align: center;
       font-size: 14px;
     }
-
     footer a {
       color: #e91e63;
+      margin: 0 10px;
       text-decoration: none;
-      margin: 0 5px;
-    }
-
-    footer a:hover {
-      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-
-  <!-- HEADER -->
   <header>
     <h1 class="animated-title">
-      <span>L</span><span>u</span><span>d</span><span>o</span>
-      <span>&nbsp;</span>
-      <span>G</span><span>r</span><span>o</span><span>u</span><span>p</span>
-      <span>&nbsp;</span>
-      <span>L</span><span>i</span><span>n</span><span>k</span>
+      <span style="--i:1">L</span><span style="--i:2">u</span><span style="--i:3">d</span><span style="--i:4">o</span>
+      <span style="--i:5"> </span><span style="--i:6">G</span><span style="--i:7">r</span><span style="--i:8">o</span><span style="--i:9">u</span><span style="--i:10">p</span>
+      <span style="--i:11"> </span><span style="--i:12">L</span><span style="--i:13">i</span><span style="--i:14">n</span><span style="--i:15">k</span>
     </h1>
   </header>
 
-  <!-- CONTENT -->
   <div class="container">
-    <h1>क्या आप अपने लूडो ग्रुप को हमारी वेबसाइट पर दिखाना चाहते हैं?</h1>
+    <h2>क्या आप अपने लूडो ग्रुप को हमारी वेबसाइट पर दिखाना चाहते हैं?</h2>
     <p class="intro-text">
-      यदि आप अपने लूडो ग्रुप को हमारी वेबसाइट <strong>लूडो ग्रुप लिंक</strong> पर दिखाना चाहते हैं तो आपके ग्रुप में अधिक सदस्य शामिल हो सकते हैं।<br>
-      नीचे दिए गए फॉर्म को भरें और <strong>Submit</strong> पर क्लिक करें ताकि लूडो प्लेयर आपके ग्रुप को गूगल पर सर्च करके ज्वाइन कर सकें!
+      यदि आप अपने लूडो ग्रुप को हमारी वेबसाइट <strong>लूडो ग्रुप लिंक</strong> पर दिखाना चाहते हैं, तो आपके ग्रुप में अधिक सदस्य शामिल हो सकते हैं। नीचे दिए गए फॉर्म को भरें और <strong>Submit</strong> बटन पर क्लिक करें ताकि लूडो प्लेयर आपके ग्रुप को गूगल पर सर्च करके ज्वाइन कर सकें!
     </p>
 
-    <form class="form">
+    <form class="form" onsubmit="sendToWhatsApp(); return false;">
       <label for="name">Name</label>
-      <input type="text" id="name" placeholder="Enter Your Name" required>
+      <input type="text" id="name" required>
 
       <label for="number">Number</label>
-      <input type="tel" id="number" placeholder="Enter Your Calling Number" required>
+      <input type="tel" id="number" required>
 
       <label for="email">Email</label>
-      <input type="email" id="email" placeholder="Enter Your Email Id" required>
+      <input type="email" id="email" required>
 
       <label for="groupName">Group Name</label>
-      <input type="text" id="groupName" placeholder="Enter Your Group Name" required>
+      <input type="text" id="groupName" required>
 
       <label for="groupLink">Group Link</label>
-      <input type="url" id="groupLink" placeholder="Enter Your Group Link" required>
+      <input type="url" id="groupLink" required>
 
       <label for="rules">Group Rules</label>
-      <textarea id="rules" rows="4" placeholder="Type Here Your Group Rules..." required></textarea>
+      <textarea id="rules" rows="4" required></textarea>
 
-      <label for="dp">Upload Your Group DP (Logo)</label>
-      <input type="file" id="dp" accept="image/*">
-
-      <button type="submit">Submit</button>
+      <button type="submit">Submit via WhatsApp</button>
     </form>
 
     <div class="contact-info">
-      <p>आप अपने ग्रुप को हमें <strong>01169266013</strong> इस नंबर पर कॉल करके भी ऐड करवा सकते हैं।</p>
-      <p>You can also get your group added by calling us on this number <strong>01169266013</strong>.</p>
+      <p>आप अपने ग्रुप को हमें <strong>+91 94737 46020</strong> पर WhatsApp करके भी ऐड करवा सकते हैं।</p>
     </div>
 
     <footer>
-      <a href="#">About Us</a> |
-      <a href="#">Contact Us</a> |
-      <a href="#">Privacy Policy</a> |
-      <a href="#">Terms & Conditions</a> |
-      <a href="#">Disclaimer</a>
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Contact</a>
+      <a href="#">Privacy Policy</a>
+      <a href="#">Terms & Conditions</a>
     </footer>
   </div>
 
+  <script>
+    function sendToWhatsApp() {
+      const name = document.getElementById("name").value;
+      const number = document.getElementById("number").value;
+      const email = document.getElementById("email").value;
+      const groupName = document.getElementById("groupName").value;
+      const groupLink = document.getElementById("groupLink").value;
+      const rules = document.getElementById("rules").value;
+
+      const message = `New Ludo Group Submission:%0A
+      Name: ${name}%0A
+      Number: ${number}%0A
+      Email: ${email}%0A
+      Group Name: ${groupName}%0A
+      Group Link: ${groupLink}%0A
+      Rules: ${rules}`;
+
+      const url = `https://wa.me/919473746020?text=${encodeURIComponent(message)}`;
+      window.open(url, '_blank');
+    }
+  </script>
 </body>
 </html>
