--- a/contact.html
+++ b/contact.html
@@ -13,31 +13,29 @@
 
   <!-- Favicon -->
   <link rel="icon" href="/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" type="image/jpeg" />
-  
+
   <!-- ✅ Google AdSense Code -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725"
-     crossorigin="anonymous"></script>
-  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725" crossorigin="anonymous"></script>
+
   <!-- Google Site Verification -->
   <meta name="google-site-verification" content="google-site-verification-code-here" />
 
-  <!-- Google Analytics (G-EZF7SRX6EJ) -->
+  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){ dataLayer.push(arguments); }
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-EZF7SRX6EJ');
   </script>
 
-  <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+  <!-- Social Meta -->
   <meta property="og:title" content="JokerLudo - Trusted Ludo WhatsApp Groups" />
   <meta property="og:description" content="Join free & verified Ludo WhatsApp groups. Daily matches, secure payments & 24/7 support. Play Ludo and win cash daily with JokerLudo!" />
   <meta property="og:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
   <meta property="og:url" content="https://ludogrouplink.com/" />
   <meta property="og:type" content="website" />
 
-  <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="JokerLudo - Earn Real Money in Ludo" />
   <meta name="twitter:description" content="Join JokerLudo's WhatsApp groups to earn money by playing Ludo daily. Safe, fast, and trusted." />
@@ -67,39 +65,29 @@
       color: #333;
     }
 
-    .navbar {
-      background: #2d2e52;
-      padding: 20px;
-      text-align: center;
-    }
-
-    .logo {
-      font-size: 30px;
-      font-weight: 700;
-      color: #fff;
-      text-decoration: none;
-      display: block;
-    }
-
-    .nav-links {
-      margin-top: 10px;
+    .horizontal-navbar {
+      background: linear-gradient(90deg, #f9d423, #ff4e50);
+      padding: 10px 0;
       display: flex;
       justify-content: center;
+      flex-wrap: wrap;
       gap: 15px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     }
 
-    .nav-links a {
+    .horizontal-navbar a {
       color: #fff;
       text-decoration: none;
-      font-weight: 500;
-      padding: 8px 12px;
-      border-radius: 5px;
+      font-weight: bold;
+      padding: 10px 16px;
+      border-radius: 6px;
+      background: #ffffff20;
       transition: background 0.3s;
     }
 
-    .nav-links a:hover {
-      background: #ffde59;
-      color: #2d2e52;
+    .horizontal-navbar a:hover {
+      background: rgba(255, 255, 255, 0.4);
+      text-shadow: 1px 1px 2px #000;
     }
 
     .container {
@@ -115,12 +103,6 @@
       text-align: center;
       color: #2d2e52;
       margin-bottom: 20px;
-    }
-
-    p {
-      text-align: center;
-      font-size: 16px;
-      margin-bottom: 30px;
     }
 
     label {
@@ -159,13 +141,6 @@
     .email-info {
       text-align: center;
       margin-top: 20px;
-      font-size: 16px;
-    }
-
-    .email-info a {
-      color: #2d2e52;
-      font-weight: bold;
-      text-decoration: none;
     }
 
     footer {
@@ -175,10 +150,6 @@
       text-align: center;
       font-size: 14px;
       margin-top: 40px;
-    }
-
-    .footer-links {
-      margin-bottom: 8px;
     }
 
     .footer-links a {
@@ -191,110 +162,72 @@
       color: #ffde59;
     }
 
-    .vertical-navbar {
-  background: linear-gradient(135deg, #f9d423, #ff4e50);
-  padding: 20px 10px;
-  border-radius: 10px;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-  width: 200px;
-  margin: 0 auto;
-}
-
-.vertical-menu {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.vertical-menu li {
-  margin-bottom: 12px;
-}
-
-.vertical-menu li a {
-  display: block;
-  padding: 10px 15px;
-  background: #ffffff20;
-  color: #fff;
-  font-weight: bold;
-  border-radius: 6px;
-  text-decoration: none;
-  transition: background 0.3s ease;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-}
-
-.vertical-menu li a:hover {
-  background: rgba(255, 255, 255, 0.4);
-  text-shadow: 1px 1px 2px #000;
-}
-@media (max-width: 600px) {
-  .vertical-navbar {
-    width: 90%;
-  }
-}
-
+    @media (max-width: 600px) {
+      .horizontal-navbar {
+        flex-direction: column;
+        align-items: center;
+      }
+    }
   </style>
 </head>
 <body>
 
-<nav class="vertical-navbar">
-  <ul class="vertical-menu">
-    <li><a href="index.html">🏠 Home</a></li>
-    <li><a href="groups.html">👥 Groups</a></li>
-    <li><a href="add-group.html">➕ Add Group</a></li>
-    <li><a href="policy.html">📃 Policy</a></li>
-    <li><a href="contact.html">📞 Contact</a></li>
-    <li><a href="girls-group.html">👩 Girls Group</a></li>
-  </ul>
+<nav class="horizontal-navbar">
+  <a href="index.html">🏠 Home</a>
+  <a href="groups.html">👥 Groups</a>
+  <a href="add-group.html">➕ Add Group</a>
+  <a href="policy.html">📃 Policy</a>
+  <a href="contact.html">📞 Contact</a>
+  <a href="girls-group.html">👩 Girls Group</a>
 </nav>
 
+<div class="container">
+  <h1>Contact Us</h1>
+  <p>If you have any questions, group issues, or suggestions, feel free to reach out. You can contact us via WhatsApp or email. We’ll respond as quickly as possible.</p>
 
-  <div class="container">
-    <h1>Contact Us</h1>
-    <p>If you have any questions, group issues, or suggestions, feel free to reach out. You can contact us via WhatsApp or email. We’ll respond as quickly as possible.</p>
+  <form id="contactForm">
+    <label for="name">Your Name</label>
+    <input type="text" id="name" placeholder="Enter your name" required>
 
-    <form id="contactForm">
-      <label for="name">Your Name</label>
-      <input type="text" id="name" placeholder="Enter your name" required>
+    <label for="email">Your Email</label>
+    <input type="email" id="email" placeholder="Enter your email" required>
 
-      <label for="email">Your Email</label>
-      <input type="email" id="email" placeholder="Enter your email" required>
+    <label for="message">Your Message</label>
+    <textarea id="message" rows="5" placeholder="Write your query..." required></textarea>
 
-      <label for="message">Your Message</label>
-      <textarea id="message" rows="5" placeholder="Write your query..." required></textarea>
+    <button type="submit" class="submit-button">📩 Send via WhatsApp</button>
+  </form>
 
-      <button type="submit" class="submit-button">📩 Send via WhatsApp</button>
-    </form>
-
-    <div class="email-info">
-      Or email us at: <a href="mailto:jokerludohub1431@gmail.com">jokerludohub1431@gmail.com</a>
-    </div>
+  <div class="email-info">
+    Or email us at: <a href="mailto:jokerludohub1431@gmail.com">jokerludohub1431@gmail.com</a>
   </div>
+</div>
 
-  <footer>
-    <div class="footer-links">
-      <a href="index.html">Home</a>
-      <a href="rules.html">Rules</a>
-      <a href="join.html">Join</a>
-      <a href="addgroup.html">Add Group</a>
-      <a href="contact.html">Contact</a>
-      <a href="privacy.html">Privacy</a>
-    </div>
-    <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
-  </footer>
+<footer>
+  <div class="footer-links">
+    <a href="index.html">Home</a>
+    <a href="rules.html">Rules</a>
+    <a href="join.html">Join</a>
+    <a href="add-group.html">Add Group</a>
+    <a href="contact.html">Contact</a>
+    <a href="privacy.html">Privacy</a>
+  </div>
+  <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
+</footer>
 
-  <script>
-    document.getElementById("contactForm").addEventListener("submit", function(e) {
-      e.preventDefault();
-      const name = document.getElementById("name").value.trim();
-      const email = document.getElementById("email").value.trim();
-      const message = document.getElementById("message").value.trim();
+<script>
+  document.getElementById("contactForm").addEventListener("submit", function(e) {
+    e.preventDefault();
+    const name = document.getElementById("name").value.trim();
+    const email = document.getElementById("email").value.trim();
+    const message = document.getElementById("message").value.trim();
 
-      const finalMsg = `Hello Admin,%0A%0AI have a query regarding JokerLudo.%0A%0A👤 Name: ${encodeURIComponent(name)}%0A📧 Email: ${encodeURIComponent(email)}%0A📝 Message: ${encodeURIComponent(message)}%0A%0AThanks.`;
-    const phone = "919473746020"; // ← Yeh fix kiya gaya
-      const whatsappURL = `https://wa.me/${phone}?text=${finalMsg}`;
-      window.open(whatsappURL, '_blank');
-    });
-  </script>
+    const finalMsg = `Hello Admin,%0A%0AI have a query regarding JokerLudo.%0A%0A👤 Name: ${encodeURIComponent(name)}%0A📧 Email: ${encodeURIComponent(email)}%0A📝 Message: ${encodeURIComponent(message)}%0A%0AThanks.`;
+    const phone = "919473746020";
+    const whatsappURL = `https://wa.me/${phone}?text=${finalMsg}`;
+    window.open(whatsappURL, '_blank');
+  });
+</script>
 
 </body>
 </html>
