--- a/home.html
+++ b/home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="hi">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ludo Group Link</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>JokerLudo - Best Ludo WhatsApp Group Links | Earn Money Playing Ludo</title>
 
   <!-- SEO Meta Tags -->
   <meta name="description" content="Join India's most trusted and high-paying Ludo earning WhatsApp groups. Daily matches, instant withdrawals, and secure gameplay. JokerLudo is your #1 Ludo King group link hub." />
@@ -14,7 +14,7 @@
   <!-- Favicon -->
   <link rel="icon" href="/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" type="image/jpeg" />
 
-  <!-- Google AdSense Code -->
+  <!-- ✅ Google AdSense Code -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725" crossorigin="anonymous"></script>
 
   <!-- Google Site Verification -->
@@ -24,25 +24,24 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){ dataLayer.push(arguments); }
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-EZF7SRX6EJ');
   </script>
 
-  <!-- Open Graph -->
+  <!-- Social Meta -->
   <meta property="og:title" content="JokerLudo - Trusted Ludo WhatsApp Groups" />
   <meta property="og:description" content="Join free & verified Ludo WhatsApp groups. Daily matches, secure payments & 24/7 support. Play Ludo and win cash daily with JokerLudo!" />
   <meta property="og:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
   <meta property="og:url" content="https://ludogrouplink.com/" />
   <meta property="og:type" content="website" />
 
-  <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="JokerLudo - Earn Real Money in Ludo" />
   <meta name="twitter:description" content="Join JokerLudo's WhatsApp groups to earn money by playing Ludo daily. Safe, fast, and trusted." />
   <meta name="twitter:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
 
-  <!-- JSON-LD Schema -->
+  <!-- Schema.org JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -57,207 +56,99 @@
   }
   </script>
 
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f2f2f2;
-    }
-    header {
-      background: linear-gradient(135deg, #ff4e50, #f9d423);
-      padding: 60px 20px;
-      text-align: center;
-      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
-    }
-    .animated-title span {
-      display: inline-block;
-      opacity: 0;
-      transform: translateY(20px);
-      animation: typewriter 0.5s forwards;
-    }
-    .animated-title span:nth-child(n) { animation-delay: calc(0.1s * var(--i)); }
-    .animated-title {
-      font-size: 3rem;
-      font-weight: bold;
-      color: white;
-      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
-    }
-    @keyframes typewriter {
-      to { opacity: 1; transform: translateY(0); }
-    }
-    .container {
-      max-width: 800px;
-      margin: 30px auto;
-      background: #fff;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
-    }
-    .container h2 {
-      color: #e91e63;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .intro-text { font-size: 16px; line-height: 1.6; margin-bottom: 25px; }
-    .form { display: flex; flex-direction: column; }
-    label { margin: 10px 0 5px; font-weight: bold; }
-    input, textarea {
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 14px;
-    }
-    button {
-      margin-top: 20px;
-      background: #25D366;
-      color: white;
-      border: none;
-      padding: 12px;
-      font-size: 16px;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    .contact-info {
-      margin-top: 30px;
-      background: #fce4ec;
-      padding: 15px;
-      border-left: 5px solid #e91e63;
-      border-radius: 6px;
-    }
-    footer {
-      margin-top: 30px;
-      text-align: center;
-      font-size: 14px;
-    }
-    footer a {
-      color: #e91e63;
-      margin: 0 10px;
-      text-decoration: none;
-
-      /* Navigation Bar Styling */
-.navbar {
-  background: linear-gradient(135deg, #f9d423, #ff4e50);
-  padding: 10px 0;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-  border-bottom: 3px solid #fff;
-}
-
-.nav-menu {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  gap: 25px;
-  margin: 0;
-  padding: 0;
-  flex-wrap: wrap;
-}
-
-.nav-menu li a {
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-  padding: 8px 15px;
-  border-radius: 8px;
-  transition: background 0.3s ease;
-}
-
-.nav-menu li a:hover {
-  background: rgba(255, 255, 255, 0.2);
-  text-shadow: 1px 1px 3px #000;
-}
-@media (max-width: 600px) {
-  .nav-menu {
-    flex-direction: column;
-    align-items: center;
-    gap: 15px;
-  }
-}
-
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header>
 
-    <h1 class="animated-title">
-      <span style="--i:1">L</span><span style="--i:2">u</span><span style="--i:3">d</span><span style="--i:4">o</span>
-      <span style="--i:5"> </span><span style="--i:6">G</span><span style="--i:7">r</span><span style="--i:8">o</span><span style="--i:9">u</span><span style="--i:10">p</span>
-      <span style="--i:11"> </span><span style="--i:12">L</span><span style="--i:13">i</span><span style="--i:14">n</span><span style="--i:15">k</span>
-    </h1>
-        <nav class="navbar">
-  <ul class="nav-menu">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="groups.html">Groups</a></li>
-    <li><a href="add-group.html">Add Group</a></li>
-    <li><a href="policy.html">Policy</a></li>
-    <li><a href="contact.html">Contact</a></li>
-    <li><a href="girls-group.html">Girls Group</a></li>
-  </ul>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand fw-bold" href="index.html">JokerLudo</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="groups.html">Groups</a></li>
+        <li class="nav-item"><a class="nav-link" href="add-group.html">Add Group</a></li>
+        <li class="nav-item"><a class="nav-link" href="policy.html">Policy</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="girls-group.html">Girls Group</a></li>
+      </ul>
+    </div>
+  </div>
 </nav>
 
-  </header>
-
-  <div class="container">
-    <h2>क्या आप अपने लूडो ग्रुप को हमारी वेबसाइट पर दिखाना चाहते हैं?</h2>
-    <p class="intro-text">
-      यदि आप अपने लूडो ग्रुप को हमारी वेबसाइट <strong>लूडो ग्रुप लिंक</strong> पर दिखाना चाहते हैं, तो आपके ग्रुप में अधिक सदस्य शामिल हो सकते हैं। नीचे दिए गए फॉर्म को भरें और <strong>Submit</strong> बटन पर क्लिक करें ताकि लूडो प्लेयर आपके ग्रुप को गूगल पर सर्च करके ज्वाइन कर सकें!
-    </p>
-
-    <form class="form" onsubmit="sendToWhatsApp(); return false;">
-      <label for="name">Name</label>
-      <input type="text" id="name" required>
-
-      <label for="number">Number</label>
-      <input type="tel" id="number" required>
-
-      <label for="email">Email</label>
-      <input type="email" id="email" required>
-
-      <label for="groupName">Group Name</label>
-      <input type="text" id="groupName" required>
-
-      <label for="groupLink">Group Link</label>
-      <input type="url" id="groupLink" required>
-
-      <label for="rules">Group Rules</label>
-      <textarea id="rules" rows="4" required></textarea>
-
-      <button type="submit">Submit via WhatsApp</button>
-    </form>
-
-    <div class="contact-info">
-      <p>आप अपने ग्रुप को हमें <strong>+91 94737 46020</strong> पर WhatsApp करके भी ऐड करवा सकते हैं।</p>
-    </div>
-
-    <footer>
-      <a href="#">Home</a>
-      <a href="#">About Us</a>
-      <a href="#">Contact</a>
-      <a href="#">Privacy Policy</a>
-      <a href="#">Terms & Conditions</a>
-    </footer>
+<div class="container my-5">
+  <h3 class="mb-4 text-center">Available WhatsApp Groups</h3>
+  <div class="row" id="groupCards">
+    <!-- Cards will be injected dynamically here -->
   </div>
+</div>
 
-  <script>
-    function sendToWhatsApp() {
-      const name = document.getElementById("name").value;
-      const number = document.getElementById("number").value;
-      const email = document.getElementById("email").value;
-      const groupName = document.getElementById("groupName").value;
-      const groupLink = document.getElementById("groupLink").value;
-      const rules = document.getElementById("rules").value;
+<footer class="bg-dark text-white text-center py-3">
+  <div>
+    <a href="index.html" class="text-white mx-2">Home</a>
+    <a href="rules.html" class="text-white mx-2">Rules</a>
+    <a href="join.html" class="text-white mx-2">Join</a>
+    <a href="add-group.html" class="text-white mx-2">Add Group</a>
+    <a href="contact.html" class="text-white mx-2">Contact</a>
+    <a href="privacy.html" class="text-white mx-2">Privacy</a>
+  </div>
+  <p class="mb-0 mt-2">© 2025 JokerLudo Group. All Rights Reserved.</p>
+</footer>
 
-      const message = `New Ludo Group Submission:%0A
-      Name: ${name}%0A
-      Number: ${number}%0A
-      Email: ${email}%0A
-      Group Name: ${groupName}%0A
-      Group Link: ${groupLink}%0A
-      Rules: ${rules}`;
+<script>
+  const groups = JSON.parse(localStorage.getItem('groups') || '[]');
+  let currentDeleteId = null;
+  const deleteModal = {
+    show: () => alert("Delete confirmation feature is disabled for demo")
+  };
 
-      const url = `https://wa.me/919473746020?text=${encodeURIComponent(message)}`;
-      window.open(url, '_blank');
+  function renderGroups() {
+    const groupCards = document.getElementById('groupCards');
+    groupCards.innerHTML = '';
+
+    if (groups.length === 0) {
+      groupCards.innerHTML = '<div class="text-center">No groups added yet</div>';
+      return;
     }
-  </script>
+
+    groups.forEach((group, index) => {
+      const col = document.createElement('div');
+      col.className = 'col-md-6 col-lg-4 mb-4';
+
+      col.innerHTML = `
+        <div class="card h-100 shadow-sm">
+          <div class="card-body d-flex flex-column justify-content-between">
+            <h5 class="card-title text-success">${group.name}</h5>
+            <p class="card-text">${group.description}</p>
+            <p><span class="badge bg-success">${group.category}</span></p>
+            <div class="mt-auto d-flex justify-content-between">
+              <a href="${group.link}" target="_blank" class="btn btn-sm btn-success">
+                <i class="fab fa-whatsapp me-1"></i> Join
+              </a>
+              <button class="btn btn-sm btn-danger delete-btn" data-id="${group.id}">
+                <i class="fas fa-trash me-1"></i> Delete
+              </button>
+            </div>
+          </div>
+        </div>
+      `;
+      groupCards.appendChild(col);
+    });
+
+    document.querySelectorAll('.delete-btn').forEach(btn => {
+      btn.addEventListener('click', function () {
+        currentDeleteId = parseInt(this.getAttribute('data-id'));
+        deleteModal.show();
+      });
+    });
+  }
+
+  renderGroups();
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
