--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
     function gtag(){ dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-EZF7SRX6EJ');
+
+      <section class="ascii-animation" style="margin-top: 50px;">
+    <h2 style="text-align:center; margin-bottom: 20px;">💻 Terminal Style ASCII Animation</h2>
+    <div style="background: black; color: #00ff00; font-family: monospace; padding: 20px; border-radius: 10px; max-width: 800px; margin: auto;">
+      <pre id="ascii-animation">Loading animation...</pre>
+    </div>
+  </section>
   </script>
 
   <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
