--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
 
   <!-- Favicon -->
   <link rel="icon" href="/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" type="image/jpeg" />
-    <!-- ✅ Google AdSense Code -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725"
-     crossorigin="anonymous"></script>
   
   <!-- Google Site Verification -->
   <meta name="google-site-verification" content="google-site-verification-code-here" />
@@ -31,13 +28,6 @@
     function gtag(){ dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-EZF7SRX6EJ');
-
-      <section class="ascii-animation" style="margin-top: 50px;">
-    <h2 style="text-align:center; margin-bottom: 20px;">💻 Terminal Style ASCII Animation</h2>
-    <div style="background: black; color: #00ff00; font-family: monospace; padding: 20px; border-radius: 10px; max-width: 800px; margin: auto;">
-      <pre id="ascii-animation">Loading animation...</pre>
-    </div>
-  </section>
   </script>
 
   <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
@@ -253,6 +243,45 @@
       <p>Official Deposit No: <strong>9670814522</strong></p>
     </div>
   </section>
+
+  <!-- ASCII Animation Section -->
+  <section class="ascii-animation" style="margin-top: 50px;">
+    <h2 style="text-align:center; margin-bottom: 20px;">💻 Terminal Style ASCII Animation</h2>
+    <div style="background: black; color: #00ff00; font-family: monospace; padding: 20px; border-radius: 10px; max-width: 800px; margin: auto;">
+      <pre id="ascii-animation">Loading animation...</pre>
+    </div>
+  </section>
+
+  <script>
+    const totalFrames = 5;
+    const framePaths = Array.from({ length: totalFrames }, (_, i) => `frames/frame${i + 1}.txt`);
+    const frameDelay = 200;
+    const animationElement = document.getElementById("ascii-animation");
+    let frames = [];
+    let currentFrame = 0;
+
+    async function loadFrames() {
+      for (const path of framePaths) {
+        try {
+          const response = await fetch(path);
+          const text = await response.text();
+          frames.push(text);
+        } catch (err) {
+          frames.push("Error loading frame.");
+        }
+      }
+      startAnimation();
+    }
+
+    function startAnimation() {
+      setInterval(() => {
+        animationElement.textContent = frames[currentFrame];
+        currentFrame = (currentFrame + 1) % frames.length;
+      }, frameDelay);
+    }
+
+    loadFrames();
+  </script>
 
   <footer>
     <div class="footer-links">
