--- a/baba-ludo-group.html
+++ b/baba-ludo-group.html
@@ -68,7 +68,7 @@
     </div>
     <div class="card">
       <h3>✅ Trusted Platform</h3>
-      <p>Official Deposit No: <strong>9670814522</strong></p>
+      <p>Official Deposit No: <strong>your number</strong></p>
     </div>
   </section>
 
