--- a/baba-ludo-group.html
+++ b/baba-ludo-group.html
@@ -3,56 +3,127 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BalajiLudo - Best Ludo WhatsApp Group Links | Earn Money Playing Ludo</title>
+  <title>Bala Ji Ludo Group</title>
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Join India's most trusted and high-paying Ludo earning WhatsApp groups. Daily matches, instant withdrawals, and secure gameplay. BalajiLudo is your #1 Ludo King group link hub." />
-  <meta name="keywords" content="ludo whatsapp group link, balajiludo, earn money ludo, ludo group, whatsapp ludo group, join ludo whatsapp, trusted ludo groups, verified ludo whatsapp links, real cash ludo group, fastwin ludo king group" />
-  <meta name="author" content="BalajiLudo Group" />
+  <meta name="description" content="Join India's most trusted and high-paying Ludo earning WhatsApp groups. Daily matches, instant withdrawals, and secure gameplay. Bala Ji Ludo is your #1 Ludo King group link hub." />
+  <meta name="keywords" content="ludo whatsapp group link, balaji ludo, earn money ludo, ludo group, whatsapp ludo group, join ludo whatsapp, trusted ludo groups, verified ludo whatsapp links, real cash ludo group, fastwin ludo king group" />
+  <meta name="author" content="Bala Ji Ludo Group" />
   <meta name="robots" content="index, follow" />
 
   <!-- ✅ Google AdSense Code -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725" crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725"
+     crossorigin="anonymous"></script>
 
   <!-- Favicon -->
   <link rel="icon" href="download (7).jpg" type="image/jpeg" />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="BalajiLudo - Trusted Ludo WhatsApp Groups" />
-  <meta property="og:description" content="Join free & verified Ludo WhatsApp groups. Daily matches, secure payments & 24/7 support. Play Ludo and win cash daily with BalajiLudo!" />
+  <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+  <meta property="og:title" content="Bala Ji Ludo Group - Trusted Ludo WhatsApp Groups" />
+  <meta property="og:description" content="Join free & verified Ludo WhatsApp groups. Daily matches, secure payments & 24/7 support. Play Ludo and win cash daily with Bala Ji Ludo!" />
   <meta property="og:image" content="download (7).jpg" />
   <meta property="og:url" content="https://ludogrouplink.com/" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="BalajiLudo - Earn Real Money in Ludo" />
-  <meta name="twitter:description" content="Join BalajiLudo's WhatsApp groups to earn money by playing Ludo daily. Safe, fast, and trusted." />
+  <meta name="twitter:title" content="Bala Ji Ludo Group - Earn Real Money in Ludo" />
+  <meta name="twitter:description" content="Join Bala Ji Ludo's WhatsApp groups to earn money by playing Ludo daily. Safe, fast, and trusted." />
   <meta name="twitter:image" content="download (7).jpg" />
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Poppins', sans-serif; background: #f4f5ff; color: #333; }
-    .hero { text-align: center; padding: 50px 20px; background: linear-gradient(to right, #ffe57f, #ffc107); }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: #f4f5ff;
+      color: #333;
+    }
+    /* logo look customize */
+    .logo-img {
+      width: 140px;
+      height: auto;
+      border: 3px solid #ff0000;
+      background:#000;
+      border-radius: 10px;
+      padding: 5px;
+      display:block;
+      margin:15px auto;
+    }
+    .hero {
+      text-align: center;
+      padding: 50px 20px;
+      background: linear-gradient(to right, #ff0000, #000000);
+      color:#fff;
+    }
     .hero h1 { font-size: 32px; margin-bottom: 15px; }
     .hero p { font-size: 18px; margin-bottom: 25px; max-width: 700px; margin: 0 auto 25px auto; line-height: 1.5; }
-    .join-btn { background: #2d2e52; color: #fff; padding: 12px 25px; border-radius: 8px; text-decoration: none; font-weight: bold; transition: 0.3s; display: inline-block; }
-    .join-btn:hover { background: #1a1a3a; transform: scale(1.05); }
-    .features { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; padding: 40px 20px; }
-    .card { background: #fff; padding: 20px; border-radius: 12px; box-shadow: 0 8px 20px rgba(0,0,0,0.1); width: 280px; text-align: center; }
-    footer { background: #2d2e52; color: #fff; padding: 20px; text-align: center; }
-    .footer-links { display: flex; justify-content: center; flex-wrap: wrap; gap: 15px; margin-bottom: 10px; }
+    .join-btn {
+      background: #2d2e52;
+      color: #fff;
+      padding: 12px 25px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: 0.3s;
+      display: inline-block;
+    }
+    .join-btn:hover {
+      background: #1a1a3a;
+      transform: scale(1.05);
+    }
+    .features {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      padding: 40px 20px;
+    }
+    .card {
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      width: 280px;
+      text-align: center;
+    }
+    footer {
+      background: #2d2e52;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    .footer-links {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-bottom: 10px;
+    }
     .footer-links a { color: #fff; text-decoration: none; }
     .footer-links a:hover { color: #ffde59; }
-    .seo-text { max-width: 800px; margin: 20px auto; padding: 0 20px; color: #555; font-size: 16px; line-height: 1.6; text-align: center; }
+    .seo-text {
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 0 20px;
+      color: #555;
+      font-size: 16px;
+      line-height: 1.6;
+      text-align: center;
+    }
+    @media(max-width: 768px){
+      .features{flex-direction:column;}
+    }
   </style>
 </head>
 <body>
+  
+  <img src="download (7).jpg" class="logo-img" alt="Bala Ji Ludo Logo">
+
   <section class="hero">
-    <h1>Join Trusted Ludo WhatsApp Groups!</h1>
-    <p>Make your luck with BalajiLudo – India’s trusted Ludo earning platform with free and verified WhatsApp groups, Ludo King tournaments, and instant payouts.</p>
-    <a href="https://chat.whatsapp.com/FqSLVmTTEHY5thUy02lxss" class="join-btn">Join Balaji Group Now</a>
+    <h1>Bala Ji Ludo Group</h1>
+    <p>India’s trusted Ludo earning platform with free verified WhatsApp groups, tournaments, and instant payouts.</p>
+    <a href="https://chat.whatsapp.com/FqSLVmTTEHY5thUy02lxss" class="join-btn">Join Bala Ji Group Now</a>
     <br><br>
     <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Ludo Group</a>
   </section>
@@ -68,12 +139,12 @@
     </div>
     <div class="card">
       <h3>✅ Trusted Platform</h3>
-      <p>Official Deposit No: <strong>your number</strong></p>
+      <p>Official Deposit No: <strong>9670814522</strong></p>
     </div>
   </section>
 
   <section class="seo-text">
-    <p>Explore top-rated <strong>Ludo WhatsApp group links</strong> with BalajiLudo. We provide the most reliable and high-paying <strong>WhatsApp Ludo groups</strong> for players across India. Get daily match updates, secure transactions, and instant payouts. Whether you're searching for <strong>Ludo King WhatsApp groups</strong>, <strong>FastWin Ludo groups</strong>, or <strong>verified earning Ludo groups</strong>, BalajiLudo has you covered.</p>
+    <p>Explore top-rated <strong>Ludo WhatsApp group links</strong> with Bala Ji Ludo. We provide the most reliable and high-paying <strong>WhatsApp Ludo groups</strong> for players across India. Get daily match updates, secure transactions, and instant payouts. Whether you're searching for <strong>Ludo King WhatsApp groups</strong>, <strong>FastWin Ludo groups</strong>, or <strong>verified earning Ludo groups</strong>, Bala Ji Ludo has you covered.</p>
   </section>
 
   <footer>
@@ -85,7 +156,7 @@
       <a href="privacy.html">Privacy</a>
       <a href="contact.html">Contact</a>
     </div>
-    <p>© 2025 BalajiLudo Group. All Rights Reserved.</p>
+    <p>© 2025 Bala Ji Ludo Group. All Rights Reserved.</p>
   </footer>
 </body>
 </html>
