--- a/baba-ludo-group.html
+++ b/baba-ludo-group.html
@@ -5,27 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bala Ji Ludo Group</title>
 
-  <!-- SEO Meta Tags -->
   <meta name="description" content="Join India's most trusted and high-paying Ludo earning WhatsApp groups. Daily matches, instant withdrawals, and secure gameplay. Bala Ji Ludo is your #1 Ludo King group link hub." />
   <meta name="keywords" content="ludo whatsapp group link, balaji ludo, earn money ludo, ludo group, whatsapp ludo group, join ludo whatsapp, trusted ludo groups, verified ludo whatsapp links, real cash ludo group, fastwin ludo king group" />
   <meta name="author" content="Bala Ji Ludo Group" />
   <meta name="robots" content="index, follow" />
 
-  <!-- ✅ Google AdSense Code -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725"
      crossorigin="anonymous"></script>
 
-  <!-- Favicon -->
   <link rel="icon" href="download (7).jpg" type="image/jpeg" />
 
-  <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
   <meta property="og:title" content="Bala Ji Ludo Group - Trusted Ludo WhatsApp Groups" />
   <meta property="og:description" content="Join free & verified Ludo WhatsApp groups. Daily matches, secure payments & 24/7 support. Play Ludo and win cash daily with Bala Ji Ludo!" />
   <meta property="og:image" content="download (7).jpg" />
   <meta property="og:url" content="https://ludogrouplink.com/" />
   <meta property="og:type" content="website" />
 
-  <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Bala Ji Ludo Group - Earn Real Money in Ludo" />
   <meta name="twitter:description" content="Join Bala Ji Ludo's WhatsApp groups to earn money by playing Ludo daily. Safe, fast, and trusted." />
@@ -39,7 +34,6 @@
       background: #f4f5ff;
       color: #333;
     }
-    /* logo look customize */
     .logo-img {
       width: 140px;
       height: auto;
@@ -117,46 +111,54 @@
   </style>
 </head>
 <body>
-  
-  <img src="download (7).jpg" class="logo-img" alt="Bala Ji Ludo Logo">
 
-  <section class="hero">
-    <h1>Bala Ji Ludo Group</h1>
-    <p>India’s trusted Ludo earning platform with free verified WhatsApp groups, tournaments, and instant payouts.</p>
-    <a href="https://chat.whatsapp.com/FqSLVmTTEHY5thUy02lxss" class="join-btn">Join Bala Ji Group Now</a>
-    <br><br>
-    <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Ludo Group</a>
-  </section>
+<div style="display:flex;align-items:center;justify-content:center;margin-top:15px;gap:10px;">
+ <img src="download (7).jpg" style="width:60px;height:60px;border-radius:50%;border:2px solid #ff0000;" alt="Balaji Logo">
+ <h2 style="font-size:28px;color:#ff0000;">BalajiLudo Group</h2>
+</div>
 
-  <section class="features">
-    <div class="card">
-      <h3>✅ 24x7 Support</h3>
-      <p>Always online to help with fast responses.</p>
-    </div>
-    <div class="card">
-      <h3>✅ Instant Withdrawals</h3>
-      <p>Quick payout every time you win.</p>
-    </div>
-    <div class="card">
-      <h3>✅ Trusted Platform</h3>
-      <p>Official Deposit No: <strong>9670814522</strong></p>
-    </div>
-  </section>
+<section class="hero">
+  <h1>Bala Ji Ludo Group</h1>
+  <p>India’s trusted Ludo earning platform with free verified WhatsApp groups, tournaments, and instant payouts.</p>
+  <a href="https://chat.whatsapp.com/FqSLVmTTEHY5thUy02lxss" class="join-btn">Join Bala Ji Group Now</a>
+  <br><br>
+  <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Ludo Group</a>
+</section>
 
-  <section class="seo-text">
-    <p>Explore top-rated <strong>Ludo WhatsApp group links</strong> with Bala Ji Ludo. We provide the most reliable and high-paying <strong>WhatsApp Ludo groups</strong> for players across India. Get daily match updates, secure transactions, and instant payouts. Whether you're searching for <strong>Ludo King WhatsApp groups</strong>, <strong>FastWin Ludo groups</strong>, or <strong>verified earning Ludo groups</strong>, Bala Ji Ludo has you covered.</p>
-  </section>
+<section style="padding:30px;text-align:center;">
+<p>Bala Ji Ludo Group ek popular aur trusted WhatsApp gaming community hai jaha daily matches hotey hai. <strong>Rules:</strong> No cheating, no abuse, timely payment proof aur fair play mandatory hai.</p>
+<img src="download (7).jpg" style="width:200px;border-radius:10px;margin-top:15px;" alt="Group Image">
+</section>
 
-  <footer>
-    <div class="footer-links">
-      <a href="index.html">Home</a>
-      <a href="rules.html">Rules</a>
-      <a href="join.html">Join</a>
-      <a href="addgroup.html">Add Group</a>
-      <a href="privacy.html">Privacy</a>
-      <a href="contact.html">Contact</a>
-    </div>
-    <p>© 2025 Bala Ji Ludo Group. All Rights Reserved.</p>
-  </footer>
+<section class="features">
+  <div class="card">
+    <h3>✅ 24x7 Support</h3>
+    <p>Always online to help with fast responses.</p>
+  </div>
+  <div class="card">
+    <h3>✅ Instant Withdrawals</h3>
+    <p>Quick payout every time you win.</p>
+  </div>
+  <div class="card">
+    <h3>✅ Trusted Platform</h3>
+    <p>Official Deposit No: <strong>**********</strong></p>
+  </div>
+</section>
+
+<section class="seo-text">
+  <p>Explore top-rated <strong>Ludo WhatsApp group links</strong> with Bala Ji Ludo. We provide the most reliable and high-paying <strong>WhatsApp Ludo groups</strong> for players across India. Get daily match updates, secure transactions, and instant payouts. Whether you're searching for <strong>Ludo King WhatsApp groups</strong>, <strong>FastWin Ludo groups</strong>, or <strong>verified earning Ludo groups</strong>, Bala Ji Ludo has you covered.</p>
+</section>
+
+<footer>
+  <div class="footer-links">
+    <a href="index.html">Home</a>
+    <a href="rules.html">Rules</a>
+    <a href="join.html">Join</a>
+    <a href="addgroup.html">Add Group</a>
+    <a href="privacy.html">Privacy</a>
+    <a href="contact.html">Contact</a>
+  </div>
+  <p>© 2025 Bala Ji Ludo Group. All Rights Reserved.</p>
+</footer>
 </body>
 </html>
