--- a/baba-ludo-group.html
+++ b/baba-ludo-group.html
@@ -126,8 +126,27 @@
 </section>
 
 <section style="padding:30px;text-align:center;">
+  <img src="download (7).jpg" style="width:200px;border-radius:10px;margin-top:15px;" alt="Group Image">
+   <h2 style="font-size:28px;color:#ff0000;">BalajiLudo Group</h2>
 <p>Bala Ji Ludo Group ek popular aur trusted WhatsApp gaming community hai jaha daily matches hotey hai. <strong>Rules:</strong> No cheating, no abuse, timely payment proof aur fair play mandatory hai.</p>
-<img src="download (7).jpg" style="width:200px;border-radius:10px;margin-top:15px;" alt="Group Image">
+<div class="card">
+    <h31️⃣ Fair Gameplay Rule</h3>
+    <p>Kisi bhi tareh ka cheating app, screen mirror, multi-device ya hack istemal strictly banned hai.
+<br>
+Match sirf original Ludo app (official) par hi khela jayega.</p>
+  </div>
+    <div class="card">
+    <h3>2️⃣ Entry & Payment Rules</h3>
+    <p>Match join karne se pehle entry fees time se jama karna mandatory hai. <br>
+
+Payment proof (screenshot/UPI ID reference) group me bhejna hoga, phir hi match slot confirm hoga. <br>
+
+Match jeetne par payout ke liye bank/UPI details sahi dena hona chahiye.</p>
+  </div>
+  <div class="card">
+    <h3>✅ Trusted Platform</h3>
+    <p>Official Deposit No: <strong>**********</strong></p>
+  </div>
 </section>
 
 <section class="features">
