--- a/baba-ludo-group.html
+++ b/baba-ludo-group.html
@@ -130,7 +130,7 @@
    <h2 style="font-size:28px;color:#ff0000;">BalajiLudo Group</h2>
 <p>Bala Ji Ludo Group ek popular aur trusted WhatsApp gaming community hai jaha daily matches hotey hai. <strong>Rules:</strong> No cheating, no abuse, timely payment proof aur fair play mandatory hai.</p>
 <div class="card">
-    <h31️⃣ Fair Gameplay Rule</h3>
+    <h3>1️⃣ Fair Gameplay Rule</h3>
     <p>Kisi bhi tareh ka cheating app, screen mirror, multi-device ya hack istemal strictly banned hai.
 <br>
 Match sirf original Ludo app (official) par hi khela jayega.</p>
