--- a/baba-ludo-group.html
+++ b/baba-ludo-group.html
@@ -129,12 +129,12 @@
   <img src="download (7).jpg" style="width:200px;border-radius:10px;margin-top:15px;" alt="Group Image">
    <h2 style="font-size:28px;color:#ff0000;">BalajiLudo Group</h2>
 <p>Bala Ji Ludo Group ek popular aur trusted WhatsApp gaming community hai jaha daily matches hotey hai. <strong>Rules:</strong> No cheating, no abuse, timely payment proof aur fair play mandatory hai.</p>
-<div class="card">
+<br>
     <h3>1️⃣ Fair Gameplay Rule</h3>
     <p>Kisi bhi tareh ka cheating app, screen mirror, multi-device ya hack istemal strictly banned hai.
 <br>
 Match sirf original Ludo app (official) par hi khela jayega.</p>
-  </div>
+ <br>
    
     <h3>2️⃣ Entry & Payment Rules</h3>
     <p>Match join karne se pehle entry fees time se jama karna mandatory hai. <br>
@@ -142,11 +142,34 @@ Match sirf original Ludo app (official) par hi khela jayega.</p>
 Payment proof (screenshot/UPI ID reference) group me bhejna hoga, phir hi match slot confirm hoga. <br>
 
 Match jeetne par payout ke liye bank/UPI details sahi dena hona chahiye.</p>
-  </div>
- 
-    <h3>✅ Trusted Platform</h3>
-    <p>Official Deposit No: <strong>**********</strong></p>
-  </div>
+
+ <br>
+    <h3>3️⃣ Withdrawal Rules</h3>
+    <p>Kisi bhi player/admin ke saath bad-tameezi, abuse, personal comment, trolling, hate speech bilkul allowed nahi hai.
+<br>
+      
+Rule violate karne par bina warning group se out + blacklist kar diya jayega.</p>
+  <br>
+  <h3>5️⃣ Match Rules</h3>
+    <p>Match start hone ke baad mid exit/leave karna = direct loss.
+<br>
+Agar network problem ho ya disconnect ho, toh doosra player ka decision final hoga. <br>
+
+Dice slow-motion tricks, turn skip exploit allowed nahi.</p><br>
+   <h3>6️⃣ Admin Decision Final</h3>
+    <p>Har match ke result ka final decision admin ka hoga.
+<br>
+Dispute case me players ko proof dena hoga — bina proof ke claim accept nahi hoga.</p>
+    <h3>7️⃣ Promotion & Spam Rules</h3>
+    <p>Group me apna khud ka link/ad kisi bhi type ka spam strictly banned hai.
+<br>
+Sirf approved marketing/admin posts hi allow hai.
+
+s</p>
+    <h3>8️⃣ Privacy Rules</h3>
+    <p>Kisi bhi player ka personal number, UPI ID, screenshot ka misuse nahi karna.
+<br>
+Group ke bahar share karna strictly prohibited.</p>
 </section>
 
 <section class="features">
