--- a/baba-ludo-group.html
+++ b/baba-ludo-group.html
@@ -112,9 +112,9 @@
 </head>
 <body>
 
-<div style="display:flex;align-items:center;justify-content:center;margin-top:15px;gap:10px;">
- <img src="download (7).jpg" style="width:60px;height:60px;border-radius:50%;border:2px solid #ff0000;" alt="Balaji Logo">
- <h2 style="font-size:28px;color:#ff0000;">BalajiLudo Group</h2>
+<div style="background:linear-gradient(90deg,#ff0000,#ff9900,#ffff00,#33cc33,#0099ff,#6600cc);padding:15px;display:flex;align-items:center;justify-content:center;gap:10px;border-radius:10px;margin:20px;">
+ <img src="download (7).jpg" style="width:60px;height:60px;border-radius:50%;border:2px solid #ffffff;" alt="Balaji Logo">
+ <h2 style="font-size:32px;color:#fff;">BalajiLudo Group</h2>
 </div>
 
 <section class="hero">
@@ -135,26 +135,20 @@
 <br>
 Match sirf original Ludo app (official) par hi khela jayega.</p>
  <br>
-   
     <h3>2️⃣ Entry & Payment Rules</h3>
     <p>Match join karne se pehle entry fees time se jama karna mandatory hai. <br>
-
 Payment proof (screenshot/UPI ID reference) group me bhejna hoga, phir hi match slot confirm hoga. <br>
-
 Match jeetne par payout ke liye bank/UPI details sahi dena hona chahiye.</p>
-
  <br>
     <h3>3️⃣ Withdrawal Rules</h3>
     <p>Kisi bhi player/admin ke saath bad-tameezi, abuse, personal comment, trolling, hate speech bilkul allowed nahi hai.
 <br>
-      
 Rule violate karne par bina warning group se out + blacklist kar diya jayega.</p>
   <br>
   <h3>5️⃣ Match Rules</h3>
     <p>Match start hone ke baad mid exit/leave karna = direct loss.
 <br>
 Agar network problem ho ya disconnect ho, toh doosra player ka decision final hoga. <br>
-
 Dice slow-motion tricks, turn skip exploit allowed nahi.</p><br>
    <h3>6️⃣ Admin Decision Final</h3>
     <p>Har match ke result ka final decision admin ka hoga.
@@ -163,9 +157,7 @@ Dispute case me players ko proof dena hoga — bina proof ke claim accept nahi h
     <h3>7️⃣ Promotion & Spam Rules</h3>
     <p>Group me apna khud ka link/ad kisi bhi type ka spam strictly banned hai.
 <br>
-Sirf approved marketing/admin posts hi allow hai.
-
-s</p>
+Sirf approved marketing/admin posts hi allow hai.</p>
     <h3>8️⃣ Privacy Rules</h3>
     <p>Kisi bhi player ka personal number, UPI ID, screenshot ka misuse nahi karna.
 <br>
