--- a/baba-ludo-group.html
+++ b/baba-ludo-group.html
@@ -153,11 +153,11 @@ Dice slow-motion tricks, turn skip exploit allowed nahi.</p><br>
    <h3>6️⃣ Admin Decision Final</h3>
     <p>Har match ke result ka final decision admin ka hoga.
 <br>
-Dispute case me players ko proof dena hoga — bina proof ke claim accept nahi hoga.</p>
+Dispute case me players ko proof dena hoga — bina proof ke claim accept nahi hoga.</p><br>
     <h3>7️⃣ Promotion & Spam Rules</h3>
     <p>Group me apna khud ka link/ad kisi bhi type ka spam strictly banned hai.
 <br>
-Sirf approved marketing/admin posts hi allow hai.</p>
+Sirf approved marketing/admin posts hi allow hai.</p> <br>
     <h3>8️⃣ Privacy Rules</h3>
     <p>Kisi bhi player ka personal number, UPI ID, screenshot ka misuse nahi karna.
 <br>
