--- a/baba-ludo-group.html
+++ b/baba-ludo-group.html
@@ -112,10 +112,8 @@
 </head>
 <body>
 
-
- <img src="download (7).jpg" style="width:60px;height:60px;border-radius:50%;border:2px solid #ffffff;" alt="Balaji Logo">
- <h2 style="font-size:32px;color:#fff;">BalajiLudo Group</h2>
-</div>
+<img src="download (7).jpg" style="width:70px;height:70px;border-radius:50%;border:3px solid #ff0000;box-shadow:0px 0px 15px #ff0000;margin-top:20px;" alt="Balaji Logo">
+<h2 style="font-size:35px;color:#ff0000;text-shadow:2px 2px 6px #000;font-weight:700;border:3px solid #ffffff;padding:5px 15px;border-radius:8px;display:inline-block;margin-bottom:10px;">BalajiLudo Group</h2>
 
 <section class="hero">
   <h1>Bala Ji Ludo Group</h1>
@@ -141,7 +139,7 @@ Payment proof (screenshot/UPI ID reference) group me bhejna hoga, phir hi match 
 Match jeetne par payout ke liye bank/UPI details sahi dena hona chahiye.</p>
  <br>
     <h3>3️⃣ Withdrawal Rules</h3>
-    <p>Kisi bhi player/admin ke saath bad-tameezi, abuse, personal comment, trolling, hate speech bilkul allowed nahi hai.
+    <p>Kisi bhi player/admin ke saath bad-tameezi, abuse, personal comment, trolling, hate speech allowed nahi hai.
 <br>
 Rule violate karne par bina warning group se out + blacklist kar diya jayega.</p>
   <br>
