--- a/baba-ludo-group.html
+++ b/baba-ludo-group.html
@@ -112,8 +112,10 @@
 </head>
 <body>
 
-<img src="download (7).jpg" style="width:70px;height:70px;border-radius:50%;border:3px solid #ff0000;box-shadow:0px 0px 15px #ff0000;margin-top:20px;" alt="Balaji Logo">
-<h2 style="font-size:35px;color:#ff0000;text-shadow:2px 2px 6px #000;font-weight:700;border:3px solid #ffffff;padding:5px 15px;border-radius:8px;display:inline-block;margin-bottom:10px;">BalajiLudo Group</h2>
+  <div style="background:linear-gradient(90deg,#ff0000,#ff9900,#ffff00,#33cc33,#0099ff,#6600cc);padding:15px;display:flex;align-items:center;justify-content:center;gap:10px;border-radius:10px;margin:20px;">
+ <img src="download (7).jpg" style="width:60px;height:60px;border-radius:50%;border:2px solid #ffffff;" alt="Balaji Logo">
+ <h2 style="font-size:32px;color:#fff;text-shadow:2px 2px 4px #000;font-weight:700;border:3px solid #ffffff;padding:5px 15px;border-radius:8px;">BalajiLudo Group</h2>
+</div>
 
 <section class="hero">
   <h1>Bala Ji Ludo Group</h1>
