--- a/baba-ludo-group.html
+++ b/baba-ludo-group.html
@@ -112,11 +112,11 @@
 </head>
 <body>
 
-  <div style="background:linear-gradient(90deg,#ff0000,#ff9900,#ffff00,#33cc33,#0099ff,#6600cc);padding:15px;display:flex;align-items:center;justify-content:center;gap:10px;border-radius:10px;margin:20px;">
+  <section class="hero">
  <img src="download (7).jpg" style="width:60px;height:60px;border-radius:50%;border:2px solid #ffffff;" alt="Balaji Logo">
  <h2 style="font-size:32px;color:#fff;text-shadow:2px 2px 4px #000;font-weight:700;border:3px solid #ffffff;padding:5px 15px;border-radius:8px;">BalajiLudo Group</h2>
 </div>
-
+</section>
 <section class="hero">
   <h1>Bala Ji Ludo Group</h1>
   <p>India’s trusted Ludo earning platform with free verified WhatsApp groups, tournaments, and instant payouts.</p>
